--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -62,7 +62,7 @@ dashboardProviders:
     providers:
       - name: "default"
         orgId: 1
-        folder: ''
+        folder: 'PodiumD_Monitoring_Logging'
         type: file
         disableDeletion: false
         editable: true
