--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -359,7 +359,7 @@ gateway:
 sidecar:
   image:
     registry: {{ .Values.global.imageRegistry }} 
-    repository: {{ .Values.global.imageRegistry }}/grafana-sidecar
+    repository: grafana-sidecar
     tag: 1.26.1
   dashboards:
     skipReload: true
