--- a/charts/monitoring-logging/prometheus/values.yaml
+++ b/charts/monitoring-logging/prometheus/values.yaml
@@ -1,143 +1,144 @@
 global:
-  imageRegistry: REP_ACR_NAME_REP.azurecr.io  # Centralized registry config
+  imageRegistry: ""  # Centralized registry config
   
 grafana:
   image:
-    registry: {{ .Values.global.imageRegistry }}
-    repository: grafana
-    tag: "11.5.2"
+    registry: ""
+    repository: "" 
+    tag: ""
 
-  downloadDashboardsImage:
-    registry: {{ .Values.global.imageRegistry }} 
-    repository: curl
-    tag: "7.85.0"
+downloadDashboardsImage:
+  registry: ""
+  repository: ""
+  tag: ""
 
-  additionalDataSources:
-  - name: Loki
-    type: loki
-    uid: loki
-    readOnly: false
-    editable: true
-    access: proxy
-    isDefault: true
-    url: http://{{ .Release.Name }}-gateway
-    version: 1
-    jsonData:
-      timeout: 300
+additionalDataSources:
+- name: Loki
+  type: loki
+  uid: loki
+  readOnly: false
+  editable: true
+  access: proxy
+  isDefault: true
+  url: http://{{ .Release.Name }}-gateway
+  version: 1
+  jsonData:
+    timeout: 300
     
-  datasources:
-    alertmanager:
-      enabled: false
-    datasources.yaml:
-      apiVersion: 1
-      datasources:
-        - name: Prometheus
-          editable: true
-          type: prometheus
-          readOnly: false
-          url: http://{{ .Release.Name }}-prometheus:9090
-          access: proxy
-          isDefault: false
-      deleteDatasources:
-        - name: Alertmanager
+datasources:
+  alertmanager:
+    enabled: false
+  datasources.yaml:
+    apiVersion: 1
+    datasources:
+      - name: Prometheus
+        editable: true
+        type: prometheus
+        readOnly: false
+        url: http://{{ .Release.Name }}-prometheus:9090
+        access: proxy
+        isDefault: false
+    deleteDatasources:
+      - name: Alertmanager
 
-  adminPassword: "KV_GRAFANA_ADMIN_KV"
-  
-  nodeSelector:
-    kubernetes.azure.com/mode: system
-  
-  containerSecurityContext:
-    readOnlyRootFilesystem: true
-    allowPrivilegeEscalation: false
-    runAsNonRoot: true
-  
-  envFromSecrets:
-    - name: gf-database-password
-    - name: gf-client-secret
-  
-  dashboardProviders:
-    dashboardproviders.yaml:
-      apiVersion: 1
-      providers:
-        - name: "default"
-          orgId: 1
-          folder: 'PodiumD_Monitoring_Logging'
-          type: file
-          disableDeletion: false
-          editable: true
-          options:
-            path: /var/lib/grafana/dashboards/default
-  
-  dashboards:
-    default:
-      Logging-PodiumD:
-        url: https://raw.githubusercontent.com/Dimpact-Samenwerking/helm-charts/refs/heads/feature/IN-72_monitoring-logging/charts/monitoring-logging/grafana/dashboards/logging_PodiumD.json
-        token: ''
-        datasource: Loki
-  dashboardsConfigMaps:
-    default: "loki-dashboard"
+adminPassword: ""
 
-  grafana.ini:
-    server:
-      root_url: https://REP_DOMAIN_REP
-    database:
-      type: postgres
-      host: psql-REP_ENVIRONMENT_REP-REP_GEMEENTE_REP.postgres.database.azure.com:5432
-      name: grafana
-      user: grafana
-      password: $__env{gf-database-password}
-      ssl_mode: require
-    dataproxy:
-      timeout: 300
-      keep_alive_seconds: 300
-    smtp:
-      enabled: true
-      host: mail.enschede.nl:587
-      from_address: noreply@REP_GRAFANA_DOMAIN_REP
-      skip_verify: true
-    auth.azuread:
-      name: Azure AD
-      enabled: true
-      allow_sign_up: true
-      auto_login: true
-      client_id: REP_GRAFANA_ID_REP
-      client_secret: $__env{gf-client-secret}
-      scopes: openid email profile
-      auth_url: https://login.microsoftonline.com/996a05f9-6875-4960-a833-6e3aff171400/oauth2/v2.0/authorize
-      token_url: https://login.microsoftonline.com/996a05f9-6875-4960-a833-6e3aff171400/oauth2/v2.0/token
-      allowed_domains: []
-      allowed_groups: []
-      allowed_organizations: 996a05f9-6875-4960-a833-6e3aff171400
-      role_attribute_strict: false
-      allow_assign_grafana_admin: true
-      skip_org_role_sync: false
-      use_pkce: true
-    auth.basic:
-      enabled: false  # disable standaard login
-      disable_login_form: true
-      allow_sign_up: false
-    metrics:
-      enabled: false
-    dashboards:
-      default_home_dashboard_path: /var/lib/grafana/dashboards/default/loki-dashboard.json
-  
-  initChownData:
-    image:
-      registry: {{ .Values.global.imageRegistry }} 
-      repository: grafana-init-chown-data
-      tag: "1.31.1"
-  
-  persistence:
+nodeSelector:
+  kubernetes.azure.com/mode: system
+
+containerSecurityContext:
+  readOnlyRootFilesystem: true
+  allowPrivilegeEscalation: false
+  runAsNonRoot: true
+
+envFromSecrets:
+  - name: ""
+  - name: ""
+
+dashboardProviders:
+  dashboardproviders.yaml:
+    apiVersion: 1
+    providers:
+      - name: "default"
+        orgId: 1
+        folder: 'PodiumD_Monitoring_Logging'
+        type: file
+        disableDeletion: false
+        editable: true
+        options:
+          path: /var/lib/grafana/dashboards/default
+
+dashboards:
+  default:
+    Logging-PodiumD:
+      url: https://raw.githubusercontent.com/Dimpact-Samenwerking/helm-charts/refs/heads/feature/IN-72_monitoring-logging/charts/monitoring-logging/grafana/dashboards/logging_PodiumD.json
+      token: ''
+      datasource: Loki
+dashboardsConfigMaps:
+  default: "loki-dashboard"
+
+grafana.ini:
+  server:
+    root_url: ""
+  database:
+    type: 
+    host: ""
+    name: ""
+    user: ""
+    password: ""
+    ssl_mode: ""
+  dataproxy:
+    timeout: 300
+    keep_alive_seconds: 300
+  smtp:
     enabled: true
-    storageClassName: default
-    accessModes:
-      - ReadWriteOnce
-    size: 20Gi
-    type: pvc
-    finalizers:
-      - kubernetes.io/pvc-protection
+    host: ""
+    from_address: ""
+    skip_verify: true
+  auth.azuread:
+    name: Azure AD
+    enabled: true
+    allow_sign_up: true
+    auto_login: true
+    client_id: ""
+    client_secret: ""
+    scopes: ""
+    auth_url: ""
+    token_url: ""
+    allowed_domains: []
+    allowed_groups: []
+    allowed_organizations: ""
+    role_attribute_strict: false
+    allow_assign_grafana_admin: true
+    skip_org_role_sync: false
+    use_pkce: true
+  auth.basic:
+    enabled: false  # disable standaard login
+    disable_login_form: true
+    allow_sign_up: false
+  metrics:
+    enabled: false
+  dashboards:
+    default_home_dashboard_path: /var/lib/grafana/dashboards/default/loki-dashboard.json
+
+initChownData:
+  image:
+    registry: "" 
+    repository: ""
+    tag: ""
+
+persistence:
+  enabled: true
+  storageClassName: ""
+  accessModes:
+    - ReadWriteOnce
+  size: 20Gi
+  type: pvc
+  finalizers:
+    - kubernetes.io/pvc-protection
 
 prometheus:
+  enabled: true
   prometheusSpec:
   # read all serviceMonitors from all namespaces
    # basicAuth:
