--- a/charts/monitoring-logging/kube-prometheus-stack/values.yaml
+++ b/charts/monitoring-logging/kube-prometheus-stack/values.yaml
@@ -12,6 +12,7 @@ grafana:
     repository: ""
     tag: ""
 
+  assertNoLeakedSecrets: false
   additionalDataSources:
   - name: Loki
     type: loki
