--- a/charts/monitoring-logging/kube-prometheus-stack/values.yaml
+++ b/charts/monitoring-logging/kube-prometheus-stack/values.yaml
@@ -151,7 +151,7 @@ prometheus:
     storageSpec:
       volumeClaimTemplate:
         spec:
-          storageClassName: default
+          storageClassName: ""
           accessModes: ["ReadWriteOnce"]
           resources:
             requests:
