--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -811,7 +811,8 @@ kiss:
       name: ""
     image:
       repository: ghcr.io/klantinteractie-servicesysteem/kiss-frontend
-      tag: "specifieke-header-per-type-zoekopdracht-20250326144323-e3743b6"
+      tag: "release-0.7.x-20250331101502-2fe19fb"
+
       pullPolicy: IfNotPresent
     resources:
       requests:
