--- a/charts/monitoring-logging/loki/distributed-values.yaml
+++ b/charts/monitoring-logging/loki/distributed-values.yaml
@@ -18,13 +18,13 @@ loki:
     chunk_idle_period: 30m # Flush chunks faster = less memory
     chunk_block_size: 262144
     chunk_retain_period: 1m
+    
   pattern_ingester:
     enabled: true
-      
+  
   tracing:
     enabled: false
-
- 
+    
   query_scheduler:
   # the TSDB index dispatches many more, but each individually smaller, requests. 
   # We increase the pending request queue sizes to compensate.
@@ -32,7 +32,8 @@ loki:
     
   querier:
     max_concurrent: 6 # Per-pod parallelism
-    
+
+  
   # -- Query Performance  
   limits_config:
     allow_structured_metadata: true
@@ -48,6 +49,13 @@ loki:
     max_cache_freshness_per_query: 10m
     ingestion_rate_mb: 10 
     ingestion_burst_size_mb: 20
+
+  compactor:
+    retention_enabled: true 
+    delete_request_store: s3
+    compaction_interval: 10m
+    retention_delete_delay: 2h
+    retention_delete_worker_count: 150
     
 deploymentMode: Distributed
 
