--- a/charts/vngreferentielijsten/templates/deployment.yaml
+++ b/charts/vngreferentielijsten/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         app.kubernetes.io/name: {{ include "vrl.name" . }}
         {{- include "vrl.labels" . | nindent 8 }}
       annotations:
-        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+        checksum/config: {{ include (print $.Template.BasePath "/api-proxy-configmap.yaml") . | sha256sum }}
         checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
     spec:
       containers:
